welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:7: error: '<-' expected but ';' found.
		avance();gauche();avance();droite();
                                 ^Array1:7: error: '<-' expected but ';' found.
		avance();gauche();avance();droite();
                                          ^Array1:7: error: '<-' expected but ';' found.
		avance();gauche();avance();droite();
                                                   ^Array1:8: error: '<-' expected but ';' found.
    	baisseBrosse();
                      ^Array1:9: error: illegal start of simple pattern
    	for (k<-1 to getMondeHauteur()){
        ^Array1:21: error: '<-' expected but '}' found.
}
^